DOC_MODULE=hippo-canvas

DOC_MAIN_SGML_FILE=hippo-canvas.xml

SCAN_OPTIONS=

DOC_SOURCE_DIR=../../common/canvas/hippo

HFILE_GLOB=
CFILE_GLOB=

IGNORE_HFILES=

INCLUDES= \
        $(LIBHIPPOCANVAS_CFLAGS)

GTKDOC_LIBS=../libhippocanvas-1.la

MKDB_OPTIONS=--sgml-mode --outputformat=xml

content_files=

HTML_IMAGES=

FIXXREF_OPTIONS=

include ../gtk-doc.make
